# toad

./: .gitignore  .readthedocs.yml  .tags  .tags1  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Tutorial.ipynb  detector.py  give-me-some-credit-eda-xgboost-lightgbm-shap.ipynb  merge.py  model.py  pyproject.toml  requirements-nn.txt  requirements-pmml.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini  utils.py
.github/workflows/: codeql-analysis.yml  linux.yml  macos.yml  publish.yml  pypi-test.yml  release.yml  test.yml  windows.yml
detector/: __init__.py  detector.py  merge.py  merge.pyx  utils.py  utils.pyx
docs/: API.rst  index.rst  requirements.txt
docs/source/: Reference.md  complete tutorial.ipynb  conf.py  index.md  index.rst  modules.md  modules.rst  reference.md  toad.detector.md  toad.md  toad.merge.md  toad.metrics.md  toad.nn.functional.md  toad.nn.md  toad.nn.module.md  toad.nn.trainer.md  toad.plot.md  toad.preprocessing.md  toad.preprocessing.partition.md  toad.preprocessing.process.md  toad.rst  toad.scorecard.md  toad.selection.md  toad.stats.md  toad.transform.md  toad.utils.decorator.md  toad.utils.func.md  toad.utils.md  toad.utils.mixin.md  toad教程_v4.ipynb  tutorial.ipynb  tutorial_chinese.ipynb
scripts/: build_wheels.sh
src/: c_utils.rs  lib.rs  merge.rs  merge_generic.rs  numeric_traits.rs
tests/: generate_data.py  test_cli.py  test_data.csv  test_merge.py  test_metrics.py  test_plot.py  test_scorecard.py  test_selection.py  test_stats.py  test_transform.py  test_utils.py
tests/utils/: test_mixin.py
toad/: __init__.py  c_utils.pxd  c_utils.pyx  cli.py  detector.py  impute.py  impute_test.py  merge.py  merge.pyx  merge_test.py  metrics.py  metrics_test.py  pipeline.py  pipeline_test.py  plot.py  plot_test.py  scorecard.py  scorecard_test.py  selection.py  selection_test.py  stats.py  stats_test.py  transform.py  transform_test.py  utils.py  version.py
toad/commands/: __init__.py
toad/commands/detect/: __init__.py
toad/commands/evaluate/: __init__.py  evaluate.py
toad/commands/tree/: __init__.py  tree.py
toad/nn/: __init__.py  autoencoder.py  autoencoder_demo.py  autoencoder_test.py  functional.py  functional_test.py  loss.py  loss_test.py  module.py  module_test.py  progress.py  progress_test.py  trainer.py  trainer_test.py
toad/nn/distributed/: __init__.py  ddp.py  distributor.py  fsdp.py  fsdp_test.py
toad/nn/distributed/accelerate/: accelerator.py  strategy.py
toad/nn/distributed/clusters/: __init__.py  base.py  executor.py  torch.py
toad/nn/lora/: __init__.py
toad/nn/quantize/: __init__.py  qlinear.py
toad/nn/trainer/: __init__.py  callback.py  callback_test.py  earlystop.py  earlystop_test.py  earlystopping.py  earlystopping_test.py  event.py  event_test.py  history.py  history_test.py  trainer.py  trainer_test.py
toad/nn/zoo/: __init__.py  autoencoder.py
toad/preprocessing/: __init__.py  partition.py  partition_test.py  process.py  process_test.py
toad/samples/: outlier.py
toad/tadpole/: __init__.py  base.py  utils.py
toad/transform/: __init__.py  base.py  combiner.py  combiner_test.py  gbdt_transformer.py  gbdt_transformer_test.py  select_transformer.py  select_transformer_test.py  stepwise_transformer.py  stepwise_transformer_test.py  woe_transformer.py  woe_transformer_test.py
toad/utils/: __init__.py  decorator.py  decorator_test.py  func.py  func_test.py  mixin.py  mixin_test.py  pickletracer.py  pickletracer_test.py  progress.py  progress_test.py
toad/utils/progress/: __init__.py  pandas.py  pandas_test.py  progress.py  progress_test.py
tutorial/: Basic tutorial.html
