[package]
name = "toad"
version = "0.0.61"
authors = ["Secbone <secbone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2"
itertools = "0.9.0"
numpy = "0.11.0"
ndarray = "0.13"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]