[project]
name = "toad"
description = "Toad is dedicated to facilitating model development process, especially for a scorecard."
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Secbone", email = "secbone@gmail.com"}]
classifiers = [
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dynamic = [
    "version",
    "readme",
    "dependencies",
    "entry-points",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {nn = {file = ["requirements-nn.txt"]}, tools = {file = ["requirements-tools.txt"]}, all = {file = ["requirements-nn.txt", "requirements-tools.txt"]} }

[build-system]
requires = [
    "setuptools",
    "Cython >= 0.29.15",
    "numpy >= 1.20",
    "wheel",
    "twine",
]
build-backend = "setuptools.build_meta"

[console_scripts]
toad = "toad.cli:main"

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.urls]
Homepage = "https://github.com/amphibian-dev/toad"
Documentation = "https://toad.readthedocs.io/en/stable/"
Repository = "https://github.com/amphibian-dev/toad.git"
Issues = "https://github.com/amphibian-dev/toad/issues"
Changelog = "https://github.com/amphibian-dev/toad/blob/master/CHANGELOG.md"
